Fix control bar cut off on phones

--- a/client-web/style/master.sass
+++ b/client-web/style/master.sass
@@ -43,8 +43,8 @@ body.start
         background-size: cover, 500px
 
 body
-    height: 100vh
-    width: 100vw
+    height: 100dvh
+    width: 100dvw
     overflow: hidden
     background-color: var(--bg-dark)
     display: flex
